2008-06-23  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Add OrderByNatural() to allow easy "natural" ordering,
	  and SortNatural() to allow easy "natural" sorting.
	* NaturalStringComparer.cs: Added; IComparer<string> implementation 
	  which sorts strings "naturaly", i.e. sorting embedded numbers 
	  numerically instead of lexicographically.  This allows "1 2 10" to be 
	  sorted as "1 2 10" instead of as "1 10 2" (lexicographic comparison).

2008-06-19  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Remove Source() and rename SourceAndFunc() to
	  SelfAndFunc().
	* IEnumerable.cs, String.cs, TextReader.cs: s/source/self/g.

2008-06-19  Jonathan Pryor  <jpryor@novell.com>

	* String.cs: Remove EachLine(), re-implement Lines() in terms of
	  TextReaderRocks.Lines(), and add a Words() extension method.
	* TextReader.cs: Added; extension methods Lines() and Words() for
	  TextReader instances.

2008-06-18  Jonathan Pryor  <jpryor@novell.com>

	* Int32.cs: Remove [Obsolete] methods.

2008-06-18  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Rename AggregateWithHistory() to AggregateHistory()
	  and AggregateReverseWithHistory() to AggregateReverseHistory().

2008-06-18  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: 
	  - Change semantics of AggregateReverse(), AggregateWithHistory(), 
	    AggregateReverseWithHistory() so that an empty sequence is invalid 
	    only if a seed value isn't provided.  This matches the semantics 
	    of Aggregate().  
	  - Fix AggregateWithHistory() and AggregateReverseWithHistory() so that
	    parameter-checking exceptions are emitted immediately, not delayed.
	  - Fix *WithHistory() so they don't return too many elements.
	  - Parameter name cleanup/consistency.

2008-06-18  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Rename Join() to Implode(), as .NET already provides a
	  Join() function with completely different semantics (SQL JOIN, i.e. list